
Wed Aug  5 00:31:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb: fixed a small error in the
	  documentation.  [ruby-core:24744]

Tue Aug  4 22:15:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (has_redirection): need to execute shell if commandline
	  includes newline.  cf. [ruby-core:24560]

Tue Aug  4 03:56:51 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tcltklib.c: fix trouble on old-style C function
	  declarations [ruby-core:22871].

	* ext/tk/lib/tcltklib.c: (ruby_1_8) fix warning about RUBY_RELEASE_DATE

	* ext/tk/lib/tk/multi-tk.rb: kill zombie threads.

	* ext/tk/lib/tk/fontchooser.rb: fix typo and support OptionObj.

	* ext/tk/lib/tk/{canvas.rb,virtevent.rb,image.rb,timer.rb}:
	  don't create unnecessary array.

Mon Aug  3 17:24:30 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_connect): return value was broken when some
	  error occurred.
	  [ruby-core:24234]

Sun Aug  2 06:08:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* node.h (rb_thread_status): ISO C89 do not allow a comma at the end of enum.

	* parse.y (string_type): ditto.

Sun Aug  2 11:58:22 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y: looser splatting in arguments.

Sun Aug  2 06:51:41 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (when_args): no longer needed.

Sun Aug  2 05:06:12 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (mlhs_basic): looser splatting in multi-assignment.

Sun Aug  2 04:54:01 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (f_args): looser formal optional / rest argumets.

	* parse.y (new_args): raise syntax error for unsupported synax.

	* eval.c (rb_call0): ditto.

Sat Aug  1 07:51:32 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lex.c: update.

Fri Jul 31 17:17:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y: Support for { key: value } -style hash immediates.
	  [ruby-core:21946][ruby-core:22286]
